compiler/tests/success/common/test_warn_var.jazz

param int r = 0;
u32 r = 0;


export fn fok (reg u32 r) -> reg u32 {
  reg u32 x;
  x = r;
  return x;
}

export fn f (reg u32 y) -> reg u32 {
  reg u32 x;
  x = y;
  if (x == 0) {
    reg u32 y;
    y = x;
    x = y;
  }
  return x;
}


export fn g (reg u32 z) -> reg u32 {
  reg u32 x y;
  x = z;
  return x;
}

