compiler/tests/fail/stack_allocation/arm-m4/bug_1384a.jazz
export fn stack_int() -> reg u32 {
  stack int x = 0;
  reg u32 y = (64u)x;
  return y;
}
